fixed name section not showing on contact us email and added heart in footer

--- a/style.css
+++ b/style.css
@@ -915,6 +915,3 @@ footer span a:hover {
   transition: 1s;
   transition-delay: 0.75s;
 }
-.favicon{
-  border-radius:20px;
-}
